examples/test/testpolicy8978.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8978
  namespace: namespace426
spec:
  podSelector:
    matchLabels:
      key4: value15
      key5: value22
      key42: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value48
          key47: value2
      podSelector:
        matchLabels:
          key28: value33
          key29: value8
